<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="1"
        android:icon="@drawable/ic_new_message"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_sch_new_message"
        android:title="@string/menu_new_message"
        android:orderInCategory="2"
        android:icon="@drawable/ic_new_message"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_sch_delete"
        android:title="@string/menu_delete"
        android:orderInCategory="3"
        android:icon="@drawable/ic_new_message"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_sch_sort"
        android:title="@string/menu_sort"
        android:orderInCategory="4"
        android:icon="@drawable/ic_new_message"
        android:showAsAction="ifRoom" />
    
    
</menu>
