<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dip"
    android:orientation="horizontal" 
    android:baselineAligned="false">
    
    <RelativeLayout
        android:id="@+id/rl_sch_date_container"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:gravity="center"
        android:padding="@dimen/padding_medium">
        
        <TextView
			android:id="@+id/tv_sch_month"
			android:layout_width= "match_parent"
			android:layout_height= "wrap_content"								
			android:text= "@string/test"
			android:layout_alignParentTop= "true"
			android:gravity="center"></TextView>
			
		<TextView
			android:id= "@+id/tv_sch_date"
			android:layout_width= "match_parent"
			android:layout_height= "wrap_content"
			android:textSize="@dimen/sch_month_date_text_size"								
			android:text= "@string/test"
			android:gravity= "center"
			android:layout_below= "@+id/tv_sch_month"></TextView>
			
			
			
		<TextView
			android:id="@+id/tv_sch_year"
			android:layout_width= "match_parent"
			android:layout_height= "wrap_content"								
			android:text= "@string/test"
			android:gravity= "center"
			android:layout_below= "@+id/tv_sch_date"></TextView>
			
		<TextView
			android:id= "@+id/tv_sch_time"
			android:layout_width= "match_parent"
			android:layout_height= "wrap_content"								
			android:text= "@string/test"
			android:gravity= "center"
			android:layout_below= "@+id/tv_sch_year"></TextView>
        
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/rl_sch_msg_container"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight=".75"        
        android:padding="@dimen/padding_medium">
        
        <RelativeLayout 
            android:id="@+id/ll_sch_msg_container_first_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true">
            
            <TextView
                android:id="@+id/tv_sch_recepient_to"
                android:layout_width= "wrap_content"
				android:layout_height= "wrap_content"								
				android:text= "@string/sch_recepient_to_label"
				android:gravity= "center"
				android:layout_alignParentLeft="true"
            	android:layout_alignParentTop="true"></TextView>
            
            <TextView
                android:id="@+id/tv_sch_recepient_container"
                android:layout_width= "wrap_content"
				android:layout_height= "wrap_content"								
				android:text= "@string/test"
				android:gravity= "left"
            	android:layout_alignParentTop="true"
            	android:paddingLeft="@dimen/padding_small"
            	android:layout_toLeftOf="@+id/tv_sch_color_label"
            	android:layout_toRightOf="@+id/tv_sch_recepient_to"></TextView>	
            
            <TextView
                android:id="@+id/tv_sch_color_label"
                android:layout_width= "@dimen/sch_color_label_width"
                android:layout_height="@dimen/sch_color_label_width"
                android:text= ""
				android:layout_alignParentRight="true"
            	android:layout_alignParentTop="true"
            	android:layout_marginLeft="@dimen/margin_small"
            	android:background="#ff9887"></TextView>	
            	
        </RelativeLayout>
        
        <TextView
                android:id="@+id/tv_sch_msg_body"
                android:layout_width= "match_parent"
				android:layout_height= "wrap_content"								
				android:text= "@string/test"				
            	android:layout_alignBottom="@+id/tv_sch_year"
            	android:layout_below="@id/ll_sch_msg_container_first_row"
            	android:layout_above="@+id/tv_sch_time_left"></TextView>	
            	
        
        <TextView
                android:id="@+id/tv_sch_time_left"
                android:layout_width= "match_parent"
				android:layout_height= "wrap_content"								
				android:text="@string/app_name"
				android:layout_alignParentRight="true"
				android:layout_alignParentBottom="true"
				android:gravity="right"></TextView>	
        
    </RelativeLayout>
    
    
</LinearLayout>